--- a/salina-new.html
+++ b/salina-new.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+ <!DOCTYPE html><!DOCTYPE html>
 <<!DOCTYPE html>
 <html>
 <head>
@@ -11,10 +11,9 @@
 <p> <b>Salina</b> is a 28 year old woman who has a passion for realistic art <br>
 She currently lives just outside of London and wants to sell her art work on this platform</p>
 <a href="https://google.com" target="_blank" title="Let's go to google!!!">Click here if you want to get on google!!!</a>
-<img src="img/art.png">
+<img src="img/art.jpeg">
 <img src="https://icatcare.org/app/uploads/2018/07/Thinking-of-getting-a-cat.png">
-<img src="img/yug1.png">
-<img src="img/farm.jpeg">
+<img src="img/yug1.JPG">
 
 </html>
 </body>
